--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -3,14 +3,14 @@
   <div class="container__small-card-content">
     <div class="small-card__photo">
       <img
-      src= "https://overplay.com.br/wp-content/uploads/2021/06/cod-mobile-2.jpg"
+      src= "{{photoCover}}"
       alt=""
       srcset=""
       >
     </div>
 
     <div class="small-card__title">
-      <h1><a href="#">Crossfire</a></h1>
+      <h1><a href="#">{{cardTitle}}</a></h1>
     </div>
   </div>
 
