--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,22 +1,24 @@
 <div class="container__big-card">
+
   <div class="big-card__photo">
     <img
-    src= "{{ photoCover}}"
-    alt=""
-    height="270px"
-    srcset=""
+      src="{{ photoCover }}"
+      alt=""
+      height="200px"
+      srcset=""
     >
   </div>
-  <div class="big-card__title">
-    <h1><a href="#">{{ cardTitle}}</a></h1>
 
+  <div class="big-card__title">
+    <h1><a [routerLink]="['content', Id]">{{ cardTitle }}</a></h1>
   </div>
+
   <div class="big-card__description">
     <p>
-      <a href="#">
-        {{ cardDescription}}
+      <a [routerLink]="['content', Id]">
+          {{ cardDescription }}
       </a>
     </p>
-
   </div>
+
 </div>
