--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,44 +1,40 @@
-
-<header>
-  <app-menu-bar></app-menu-bar>
-</header>
-
 <app-menu-title></app-menu-title>
 
 <div class="container__articles">
   <div class="articles__main">
+
     <app-big-card
+    Id="1"
     photoCover="https://s2-techtudo.glbimg.com/jBWRLpzFfnoaaDUgIUMJTTORCyM=/0x0:896x505/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_08fbf48bc0524877943fe86e43087e7a/internal_photos/bs/2019/T/a/A0BpXZRG2ERko5MF8gJw/captura-de-tela-2019-03-19-as-13.56.29.png"
     cardTitle="A emoção do Call of Duty em movimento"
     cardDescription="Call of Duty: Mobile is a free-to-play first-person shooter video game developed by Tencent Games and published by Activision for Android and iOS. It was released on October 1, 2019. The game received over 20 million downloads within a day of its release, earning over $2 million in revenue."
     >
     </app-big-card>
+
   </div>
   <div class="articles__others">
     <app-small-card
-    cardTitle="Firing Range"
+    Id="2"
+    cardTitle="Lute em mapas da história Call of Duty e aclamados pelos fãs Firing Range"
     photoCover="https://www.callofduty.com/content/dam/atvi/callofduty/cod-touchui/mobile/home/multiplayermaps/maps-firing-range.jpg"
     >
-    </app-small-card
-    >
+  </app-small-card>
+
 
     <app-small-card
-    cardTitle="Nuketown2"
+    Id="3"
+    cardTitle="Lute em mapas da história Call of Duty e aclamados pelos fãs Nuketown2"
     photoCover="https://www.callofduty.com/content/dam/atvi/callofduty/cod-touchui/mobile/home/multiplayermaps/maps-nuketown-2.jpg"
     >
     </app-small-card
     >
 
     <app-small-card
-    cardTitle="Hijacked"
+    Id="4"
+    cardTitle="Lute em mapas da história Call of Duty e aclamados pelos fãs Hijacked"
     photoCover="https://www.callofduty.com/content/dam/atvi/callofduty/cod-touchui/mobile/home/multiplayermaps/maps-hijacked.jpg"
     >
-    </app-small-card
-    >
-
-
-
-
+    </app-small-card>
 
   </div>
 </div>
